app/assets/stylesheets/brands_home.scss
/* ... */
.footer-info-padding{
  padding-left: 15px;
}

@media  (min-width: 1010px){
  .footer-info-padding{
    padding-left: 0;
  }
}
@media screen and (max-width: 600px){
  .footer {
    //height: 98px;
  }
}

@media screen and (max-width: 580px){

}

/* text style */
#myNavbar .text-white{
  color: #ffffff;
}

.my-nav-bar{
  float: left;
  font-family: Hind, sans-serif;
}
.my-nav-bar:after{
  content: '';
  clear: both;
}
@media (min-width: 768px) {
  .my-nav-bar{
    float: right;
  }
}

.navbar-collapse.in{
  background-color:#ffffff ;
}
.rights-reserved {
  font-family: Arial,Verdana,Helvetica,sans-serif;
}

.fb-twitter {
  float: none;
  margin-top: 5px;
  //padding-left: 38%;
}
.fb-twitter a{
  text-decoration: none;

}
.fb-twitter:after{
  content:'';
  display:block;
  clear: both;
}
.fb-twitter a{
  color: #fff;
}
.fb-twitter .fa{
  line-height: 16px;

  &.fa-google-plus{
    font-size: 1.2em;
  }
}


@media screen and (min-width: 768px){
  .fb-twitter {
    float: right;
    margin-top: 0;
    padding: 0;
  }
}

@media screen and (max-width: 800px){

}

.space {
  padding-right: 22px;
}

.fa-lg {
  line-height: 1.5;
  font-size: 1.5em;
}

/* media query section */

@media only screen and (max-width: 767px) {
  .home-menu > ul > li > a {
    padding: 10px;
  }

  .home-menu > ul > li:nth-child(1) {
    margin-top: 15px;
  }

}

.influencers-picture {
  border-radius: 50%;
  width:117px;
  height:117px;
  overflow: hidden;
}

.brands-block img.resize {

}

#myNavbar .active {
  color: #00aeef;
}

.few-brand {
  letter-spacing: -0.6px;
}

.statistics .posts-padding {
  float: right;
  width: auto;
}

@media screen and (max-width: 900px) {
  .statistics .posts-padding {
    clear: right;
    width: 49%;
  }
}

.helvetica-neue-light {
  font-family: 'Helvetica Neue 45 Light','Roboto', sans-serif;
}

.raleway-semibold {
  font-family: 'Raleway', sans-serif;
  font-weight: 600;
}

#mfPreviewBar {
  display: none;
}

@media only screen and (max-width: 767px) {

  .my-nav-bar{
    float: none;
    text-align: center;
  }

  .navbar-nav > li > a.btn-custom {
    margin-right: 16px;
  }

  .navbar-collapse.in {
    overflow-y: visible ;
  }

  .contact-form .btn-submit {
    width: 100%;
    margin-right: 10px;
  }

  .footer-info-padding, .contact-form .text-top, .brands .few-brand, .about-us .text-top, .statistics .text-top, .identity, .about-us .text-description, .fb-twitter {
    text-align: center;
  }

  .statistics {
    //padding-left: 20px;
  }

  .statistics .text-top {
    //margin-left: -30px;
  }

  .identity {
    margin-top: 0;
  }

  .about-us .text-description br {
    display: none;
  }

  .statistics {
    padding-bottom: 140px;
  }

  .brands {
    padding-bottom: 50px;
  }

}

@media screen and (max-width: 500px) {
  .statistics .posts-padding {
    width: 100%;
  }
}

.influencer-text {
  width: 460px;
}

@media screen and (max-width: 500px) {
  .influencer-text {
    width: 100%;
  }
}

.about-us-block img {
  height: 127px;
  width: 127px;
}
.welcome_bar {
  background: rgba(0, 201, 243, 1) none repeat scroll 0 0;
  color: #fff;
  font-size: 12px;
  font-weight: 600;
  overflow: hidden;
  padding: 14px 0;
  position: relative;
  width: 100%;
}
.welcome_bar .left {
  float: left;
  padding-bottom: 5px;
}
.welcome_bar .right {
  float: right;
}
.welcome_bar .right {
  float: right;
}
.welcome_bar p {
  float: left;
  margin: 0;
}
.welcome_bar p a {
  color: #fff;
  margin: 0 35px 0 0;
}
.socialmedia {
  float: right;
  margin: 0 0 0 3px;
}
.socialmedia .space{
  display: inline-block;
  padding-left: 5px;
  padding-right: 0;
}
.navbar-toggle{
  padding-right: 0;
  margin-right: 0;
}
.last-nav-item{
  margin-right: -15px;
}

//faq, sign_in page style
.non-home-page-wrapper{
  margin-top: 62px;
  padding-bottom: 20px;
  padding-top: 62px;
}


.faq-container{
  margin-bottom: 20px;

}

@media (max-width: 767px){
  .faq-container{
    margin-top: 20px;
    padding-top: 0;
  }
}
.panel-body, .list-group{
  display: none;
}
html, body, .sticky-footer-wrapper{ height: 90%; }
body > .sticky-footer-wrapper{
  height: auto;
  min-height: 100%;
}

.footer-non-home-page {
  clear: both;
  position: relative;
  z-index: 10;
  height: 3em;
  margin-top: -3em;
}
@media (max-width: 767px)  {
  .footer-non-home-page {
    height: 70px;
    margin-top: 0;
  }
}
.sticky-footer-wrapper{
  padding-bottom: 3em;
}

// sign in page  style sheet

.sign-in-form-container{
  margin: 62px auto 20px;
  padding-top: 53px;
  width: 400px;
}
@media (max-width: 767px) {
  .sign-in-form-container{
    margin-top: 0;
    padding-top: 10px;
  }
}

